<resources>
    <string name="app_name">Mobile Pos</string>
    <string name="logo">logo</string>
    <string name="pos_screen">POS</string>
    <string name="product_screen">products</string>
    <string name="report_screen">reports</string>
    <string name="remove_button">remove</string>>
    <string name="cancel_all_button">cancel all</string>>
    <string name="change_qty_button">change qty</string>>
    <string name="enter_button">Enter</string>>
    <string name="pay_button">Pay</string>>
    <string name="search_button">Search</string>
    <string name="nameTxt">NAME</string>
    <string name="barcodeTxt">BARCODE</string>
    <string name="priceTxt">PRICE</string>
    <string name="qty">QTY</string>
    <string name="pos_total_qty">Total QTY: %1$d</string>
    <string name="pos_total_price">Total Price: $%1$.2f</string>
    <string name="select_row_color">#E3F2FD</string>
    <string name="error">Error : %s</string>
    <string name="product_not_found">Product not found</string>
    <string name="error_while_pay_the_bill">error while pay the bill</string>
    <string name="search_name_or_barcode">Search name or barcode...</string>
    <string name="barcode_hint">0</string>
    <string name="total">TOTAL</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_product_activity.java">ProductActivity.java</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="id">id :</string>
    <string name="name">name :</string>
    <string name="quantity">quantity :</string>
    <string name="price">price :</string>
    <string name="barcode">barcode :</string>
    <string name="barcode_all_caps">BARCODE</string>
    <string name="item_barcode">item Barcode</string>
    <string name="_0_00">0.00</string>
    <string name="_1">1</string>
    <string name="item_name">Item Name</string>
    <string name="bill_report">Bill Report</string>
    <string name="products_list">Products list</string>
    <string name="product">Product</string>>

</resources>