<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!-- Name -->
        <TextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="12dp"
            android:text="@string/item_name"
            android:textColor="#333333"
            android:textSize="14sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#E0E0E0" />

        <!-- Qty -->
        <TextView
            android:id="@+id/txtQty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="#333333"
            android:textSize="14sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#E0E0E0" />

        <!-- Price -->
        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="end"
            android:paddingRight="8dp"
            android:text="@string/_0_00"
            android:textColor="#333333"
            android:textSize="14sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#E0E0E0" />

        <!-- Total Price -->
        <TextView
            android:id="@+id/txtBarcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingRight="12dp"
            android:text="@string/item_barcode"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Row Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#E0E0E0" />
</LinearLayout>