<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    tools:context=".presentation.screens.ProductActivity">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#333333"
            android:layout_marginStart="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="350dp"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_margin="12dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@+id/addProduct"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/id"
                android:labelFor="@+id/id"
                android:textColor="#333333"
                android:textSize="20sp"
                android:textStyle="bold"

                />
            <TextView
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="8dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:textAlignment="center"
                android:enabled="false"
                android:textColor="@color/black"
                android:textSize="20sp"

                app:layout_constraintEnd_toStartOf="@+id/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/name"
                android:labelFor="@+id/name"
                android:textColor="#333333"
                android:textSize="20sp"
                android:textStyle="bold"

                />

            <EditText
                android:textColor="@color/black"
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_background"
                android:textAlignment="center"
                android:inputType="textPersonName"
                android:shadowColor="#333333"



                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/id"
                app:layout_constraintTop_toTopOf="parent"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/quantity"
                android:labelFor="@+id/quantity"
                android:textColor="#333333"
                android:textSize="20sp"
                android:textStyle="bold"

                />
            <EditText
                android:textColor="@color/black"
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:inputType="number"
                android:textAlignment="center"

                app:layout_constraintEnd_toStartOf="@+id/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:labelFor="@id/price"
                android:text="@string/price"
                android:textColor="#333333"
                android:textSize="20sp"
                android:textStyle="bold"

                />
            <EditText
                android:textColor="@color/black"
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"

                android:textAlignment="center"
                android:inputType="numberDecimal"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/quantity"
                app:layout_constraintTop_toBottomOf="@+id/name"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:labelFor="@id/barcode"
                android:text="@string/barcode"
                android:textColor="#333333"
                android:textSize="20sp"
                android:textStyle="bold"

                />
            <EditText
                android:textColor="@color/black"
                android:id="@+id/barcode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"

                android:textAlignment="center"
                android:inputType="text"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/quantity"
                app:layout_constraintTop_toBottomOf="@+id/name"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/addProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>